# framework2D

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile-shaders.sh  flappy_turd.sln  flappy_turd.vcxproj  flappy_turd.vcxproj.filters  framework.sln  framework.vcxproj  framework.vcxproj.filters  packages.config
add/lib/: tinyxml2.lib  tinyxml2_d.lib
doc/: notes-todo.txt  notes.txt  readme.txt  scratchpad.txt  todo.txt
src/: ANIMATION_MODE.h  Action.cpp  Action.h  Animation.cpp  Animation.h  AnimationLoader.cpp  AnimationLoader.h  AnimationManager.cpp  AnimationManager.h  AnimationUtils.cpp  AnimationUtils.h  Appearance.cpp  Appearance.h  ApplyVelocityOperator.h  Background.h  Billboard.h  Button.h  CFont.cpp  CFont.h  COL_OBJ_TYPE.h  Camera.cpp  Camera.h  Character.h  Checkbox.h  Circle.cpp  Circle.h  Collidable.h  CollidableGroup.cpp  CollidableGroup.h  CollisionEvent.h  Color.h  Command.cpp  Command.h  CommandEvent.h  CommandInterpreter.cpp  CommandInterpreter.h  Context.h  Controller.cpp  Controller.h  CullObjectOperator.cpp  (+188 more)
src/maths/: vector2.h  vector3.h
utl/: build-macOS.sh  compile-shaders.bat  env-setup.sh  post-build.sh  setup-env.sh
